# Generated by Django 5.2.7 on 2025-11-04 11:19

import django.core.validators
import django.db.models.deletion
from decimal import Decimal
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("restaurant", "0003_alter_category_slug"),
    ]

    operations = [
        migrations.CreateModel(
            name="Order",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("new", "New"),
                            ("in_progress", "In progress"),
                            ("waiting_for_courier", "Waiting for courier"),
                            ("delivering", "Delivering"),
                            ("paid_credit", "Paid (credit)"),
                            ("awaiting_cash", "Awaiting cash payment"),
                            ("paid_cash", "Paid (cash)"),
                        ],
                        default="new",
                        max_length=32,
                    ),
                ),
                (
                    "payment_method",
                    models.CharField(
                        choices=[("credit", "Credit"), ("cash", "Cash")],
                        default="cash",
                        max_length=16,
                        verbose_name="Payment method",
                    ),
                ),
                ("delivery_address", models.TextField(blank=True, null=True, verbose_name="Delivery address")),
                ("self_pickup", models.BooleanField(default=False, verbose_name="Самовивіз")),
                (
                    "phone",
                    models.CharField(
                        max_length=20,
                        validators=[
                            django.core.validators.RegexValidator(
                                message="Phone number must be entered in the format: +380501234567 or 0501234567. Up to 15 digits allowed.",
                                regex="^\\+?\\d{7,15}$",
                            )
                        ],
                        verbose_name="Phone number",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("total_amount", models.DecimalField(decimal_places=2, default=Decimal("0.00"), max_digits=10)),
            ],
            options={
                "verbose_name": "Order",
                "verbose_name_plural": "Orders",
                "ordering": ["-created_at"],
            },
        ),
        migrations.CreateModel(
            name="OrderItem",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("name", models.CharField(max_length=200, verbose_name="Dish name snapshot")),
                (
                    "unit_price",
                    models.DecimalField(
                        decimal_places=2, max_digits=10, validators=[django.core.validators.MinValueValidator(0)]
                    ),
                ),
                (
                    "quantity",
                    models.PositiveIntegerField(default=1, validators=[django.core.validators.MinValueValidator(1)]),
                ),
                (
                    "line_total",
                    models.DecimalField(
                        decimal_places=2, max_digits=12, validators=[django.core.validators.MinValueValidator(0)]
                    ),
                ),
                (
                    "dish",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT, related_name="+", to="restaurant.dish"
                    ),
                ),
                (
                    "order",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE, related_name="items", to="restaurant.order"
                    ),
                ),
            ],
            options={
                "verbose_name": "Order item",
                "verbose_name_plural": "Order items",
            },
        ),
    ]
